--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -18,27 +18,50 @@ body {
   flex: 1 0 auto;
 }
 
+// Footer
 footer {
   //Style for sticking footer to bottom of the page
   flex-shrink: 0;
+  background-color: $third-background;
+  padding: 50px;
+  margin-bottom: 50px;
+
+  &::after {
+    content: "Copyright © Eivind Studios";
+    background-color: $fourth-background;
+    position: absolute;
+    bottom: 0px;
+    padding: 20px;
+    right: 0px;
+    left: 0px;
+    color: $main-background;
+    text-align: center;
+  }
+
+  & > h4 {
+    color: $main-background;
+  }
 }
 
+// Headings
 h1,
 h2,
 h3,
-h4,
-.cta {
+h4 {
   font-family: "Raleway", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
-  color: $main-background;
   margin-bottom: 30px;
 }
 
+// Call to actions
 .cta {
-  padding: 12px 24px;
+  padding: 8px 24px;
   background-color: $accent;
   border: none;
   border-radius: 5px;
   color: $main-background;
   margin-top: 10px;
+  font-size: 1.5rem;
+  font-family: "Raleway", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
 }
