--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -10,10 +10,15 @@ input,
 textarea {
   padding: 10px;
   border-radius: 7px;
-  border: 1px solid black;
   margin-bottom: 25px;
   width: 300px;
   border: 1.5px solid $third-background;
+  transition: 0.2s;
+
+  &:hover {
+    padding: 10px 16px;
+    transition: 0.2s;
+  }
 }
 
 textarea {
