--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -1,3 +1,4 @@
+// All pages
 #root {
   //Style for sticking footer to bottom of the page
   display: flex;
@@ -13,6 +14,7 @@ body {
   height: 100%;
 }
 
+// Wrapper
 .wrapper {
   // style for sticking footer to the bottom
   flex: 1 0 auto;
@@ -56,13 +58,31 @@ h4 {
 
 // Call to actions
 .cta {
-  padding: 8px 24px;
+  padding: 10px 35px;
   background-color: $accent;
-  border: none;
+  border: 2px solid $accent;
   border-radius: 5px;
   color: $main-background;
-  margin-top: 10px;
-  font-size: 1.5rem;
+  margin-top: 15px;
+  font-size: 1.2rem;
   font-family: "Raleway", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
+  transition: 0.3s;
+
+  &:hover {
+    background-color: $main-background;
+    border: 2px solid $accent;
+    color: $accent;
+    padding: 10px 40px;
+    transition: 0.3s;
+  }
+}
+
+// Inputs
+// Removes the X icon on inputs
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
 }
