--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,3 +2,6 @@
 @import "./partials/global";
 @import "./partials/navigation";
 @import "./partials/forms";
+@import "./partials/banners";
+@import "./partials/cards";
+@import "./partials/index";
