--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -1,4 +1,4 @@
-// All pages
+// ------------ Global styles ------------
 #root {
   //Style for sticking footer to bottom of the page
   display: flex;
@@ -14,13 +14,86 @@ body {
   height: 100%;
 }
 
-// Wrapper
+// ------------ Wrappers ------------
 .wrapper {
   // style for sticking footer to the bottom
   flex: 1 0 auto;
+  background-color: #f2f2f2;
 }
 
-// Footer
+// ------------ Headings ------------
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Raleway", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+// ------------ Paragraphs ------------
+p {
+  color: $text-color;
+}
+
+// ------------ Call to actions ------------
+.cta {
+  padding: 10px 35px;
+  background-color: $accent;
+  border: 2px solid $accent;
+  border-radius: 5px;
+  color: $main-background;
+  margin-top: 15px;
+  font-size: 1.2rem;
+  font-family: "Raleway", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  transition: 0.3s;
+  @include shadow-elevation-low;
+
+  &:hover {
+    background-color: $main-background;
+    border: 2px solid $accent;
+    color: $accent;
+    padding: 10px 40px;
+    transition: 0.3s;
+    @include shadow-elevation-medium;
+  }
+}
+
+.cta-alt {
+  @extend .cta;
+  background-color: $main-background;
+  color: $accent;
+  @include shadow-elevation-medium-cta;
+
+  &:hover {
+    background-color: $accent;
+    color: $main-background;
+    @include shadow-elevation-high-cta;
+  }
+}
+
+// ------------ Inputs ------------
+// Removes the X icon on inputs
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
+
+textarea:focus,
+input:focus {
+  outline: none;
+}
+
+// ------------ Icons ------------
+.star-colored {
+  color: $accent;
+}
+
+// ------------ Footer ------------
 footer {
   //Style for sticking footer to bottom of the page
   flex-shrink: 0;
@@ -43,46 +116,6 @@ footer {
   & > h5 {
     color: $main-background;
     margin: auto;
+    font-size: 1.15rem;
   }
-}
-
-// Headings
-h1,
-h2,
-h3,
-h4 {
-  font-family: "Raleway", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-// Call to actions
-.cta {
-  padding: 10px 35px;
-  background-color: $accent;
-  border: 2px solid $accent;
-  border-radius: 5px;
-  color: $main-background;
-  margin-top: 15px;
-  font-size: 1.2rem;
-  font-family: "Raleway", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 600;
-  transition: 0.3s;
-
-  &:hover {
-    background-color: $main-background;
-    border: 2px solid $accent;
-    color: $accent;
-    padding: 10px 40px;
-    transition: 0.3s;
-  }
-}
-
-// Inputs
-// Removes the X icon on inputs
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
-  display: none;
 }
