--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -2,7 +2,7 @@
 $accent: #ff385c;
 $main-background: #ffffff;
 $text-color: #484848;
-$secondary-background: #dddddd;
+$secondary-background: #f2f2f2;
 $third-background: #3d3e47;
 $fourth-background: #313239;
 $error-color: #f5c2c7;
