--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -18,7 +18,6 @@ body {
 .wrapper {
   // style for sticking footer to the bottom
   flex: 1 0 auto;
-  background-color: #f2f2f2;
 }
 
 // ------------ Headings ------------
@@ -30,6 +29,7 @@ h5 {
   font-family: "Raleway", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
   margin-bottom: 30px;
+  color: $text-color;
 }
 
 // ------------ Paragraphs ------------
