--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -50,6 +50,7 @@ p {
   font-weight: 600;
   transition: 0.3s;
   @include shadow-elevation-low;
+  display: flex;
 
   &:hover {
     background-color: $main-background;
@@ -58,6 +59,24 @@ p {
     padding: 8px 36px;
     transition: 0.3s;
     @include shadow-elevation-medium;
+
+    & > .cta-arrow {
+      animation: jiggle 0.5s;
+      animation-fill-mode: forwards;
+    }
+  }
+
+  @keyframes jiggle {
+    0% {
+      transform: translateX(0px);
+    }
+    100% {
+      transform: translateX(10px);
+    }
+  }
+
+  & > .cta-arrow {
+    margin-left: 10px;
   }
 }
 
@@ -67,6 +86,7 @@ p {
   background-color: $main-background;
   color: $accent;
   @include shadow-elevation-medium-cta;
+  display: inline-block;
 
   &:hover {
     background-color: $accent;
