--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,4 +4,4 @@
 @import "./partials/forms";
 @import "./partials/banners";
 @import "./partials/cards";
-@import "./partials/index";
+@import "./partials/home";
