--- a/src/sass/partials/_cards.scss
+++ b/src/sass/partials/_cards.scss
@@ -35,7 +35,7 @@
   }
 
   &-feature,
-  &-price-booking {
+  &-footer {
     display: flex;
   }
 
@@ -57,7 +57,7 @@
     margin: 20px 10px;
   }
 
-  &-price-booking {
+  &-footer {
     justify-content: space-around;
     align-items: baseline;
 
@@ -67,4 +67,91 @@
   }
 }
 
-// ------------ Feedback cards ------------
+// ------------ Explore cards ------------
+#accommodations {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+
+  // Every second explore card component has a background avoiding container width
+  & > div:nth-child(even) {
+    background-color: $secondary-background;
+    box-shadow: 0 0 0 100vmax $secondary-background;
+    clip-path: inset(0 -100vmax);
+  }
+}
+
+.card-container {
+  margin-bottom: 40px;
+}
+
+.explore-card {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
+  padding: 10px;
+  margin: 0px auto;
+
+  &-img > img {
+    width: 100%;
+    border-radius: 5px;
+  }
+
+  &-details {
+    & > * {
+      margin: 20px 0px;
+    }
+
+    @media (min-width: 1044px) {
+      margin-left: 40px;
+    }
+  }
+
+  &-title {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+    align-items: baseline;
+
+    &-ratings > * {
+      font-size: 1.3rem;
+      margin: 0px 5px;
+    }
+
+    @media (min-width: 1044px) {
+      flex-direction: column;
+
+      & h3 {
+        text-align: left;
+      }
+    }
+  }
+
+  &-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+
+    @media (min-width: 1044px) {
+      & p {
+        font-size: 1.5rem;
+      }
+    }
+  }
+
+  @media (min-width: 768px) {
+    width: 550px;
+    padding: 30px;
+  }
+
+  @media (min-width: 1044px) {
+    flex-direction: row;
+    width: inherit;
+    padding: 80px;
+
+    &-img > img {
+      width: 350px;
+      border-radius: 5px;
+    }
+  }
+}
