--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -39,7 +39,7 @@ p {
 
 // ------------ Call to actions ------------
 .cta {
-  padding: 8px 32px;
+  padding: 8px 16px;
   background-color: $accent;
   border: 2px solid $accent;
   border-radius: 5px;
@@ -56,7 +56,7 @@ p {
     background-color: $main-background;
     border: 2px solid $accent;
     color: $accent;
-    padding: 8px 36px;
+    padding: 8px 20px;
     transition: 0.3s;
     @include shadow-elevation-medium;
 
@@ -121,6 +121,7 @@ footer {
   flex-shrink: 0;
   background-color: $third-background;
   padding: 50px;
+  margin-top: 100px;
 
   & > h4 {
     color: $main-background;
