--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -13,6 +13,7 @@ textarea {
   width: 300px;
   border: 1.5px solid $third-background;
   transition: 0.2s;
+  color: $text-color;
 
   &:hover {
     padding: 10px 16px;
@@ -75,4 +76,18 @@ form {
   bottom: 38px;
   right: 0px;
   margin: auto 20px;
+}
+
+// ------------ Booking form styles ------------
+
+.booking-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &-input {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
 }
