All admin pages created and styled
Also added some JS functionality to the index page. The JS code makes sure that all active classes are correctly removed

--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -24,6 +24,10 @@ textarea {
   }
 }
 
+label {
+  color: $text-color;
+}
+
 textarea {
   height: 191px;
 }
@@ -91,5 +95,13 @@ form {
     display: flex;
     flex-direction: column;
     position: relative;
+  }
+}
+
+// ------------ Establish form styles ------------
+.establish-form {
+  & > * {
+    display: flex;
+    flex-direction: column;
   }
 }
