Every get requests now has special loading animations and alerts on failure

--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -157,6 +157,18 @@ table {
   color: $accent;
 }
 
+// ------------ Spinner ------------
+.spinner-border {
+  color: $accent;
+  padding: 30px;
+  margin: 0px auto;
+}
+
+// Alerts
+.alert-danger {
+  margin: 0px auto;
+}
+
 // ------------ Breadcrumbs ------------
 .breadcrumb {
   align-items: center;
