Now possible to log in, nav also change on login

--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -94,6 +94,16 @@ p {
   & > .cta-arrow {
     margin-left: 10px;
   }
+
+  &--nav {
+    white-space: pre;
+    margin: 0px auto;
+    width: 112px;
+
+    @media (min-width: 1200px) {
+      margin-left: 40px;
+    }
+  }
 }
 
 .cta-alt {
