--- a/src/sass/partials/_navigation.scss
+++ b/src/sass/partials/_navigation.scss
@@ -1,3 +1,9 @@
+.navbar {
+  max-width: 1600px;
+  margin: 0px auto;
+  padding: 20px;
+}
+
 // ------------ Brand ------------
 .brand {
   display: flex;
@@ -20,7 +26,7 @@
   &-texts {
     display: none;
     line-height: 23px;
-    @media (min-width: 1044px) {
+    @media (min-width: 1154px) {
       display: block;
     }
   }
@@ -81,7 +87,7 @@ a {
     transition: padding 0.5s, box-shadow 0.5s;
 
     @media (min-width: 992px) and (max-width: 1044px) {
-      width: 400px;
+      width: 300px;
     }
 
     @media (min-width: 1400px) {
@@ -105,8 +111,14 @@ a {
 }
 
 // ------------ Nav icons ------------
-.nav-icons i {
-  font-size: 1.7rem;
+.nav-icons {
+  @media (min-width: 992px) {
+    align-items: baseline;
+  }
+
+  & i {
+    font-size: 1.7rem;
+  }
 }
 
 // ------------ Hamburger menu icon ------------
