--- a/src/sass/partials/_navigation.scss
+++ b/src/sass/partials/_navigation.scss
@@ -2,6 +2,10 @@
   max-width: 1600px;
   margin: 0px auto;
   padding: 20px;
+
+  &-collapse {
+    align-items: baseline;
+  }
 }
 
 // ------------ Brand ------------
@@ -77,7 +81,7 @@ a {
 // ------------ Nav search bar ------------
 .search-bar {
   position: relative;
-  margin: 20px auto 0px auto;
+  /* margin: 20px auto 0px auto; */
 
   &-input {
     padding: 10px 20px;
