Reverted search bar styles

--- a/src/sass/partials/_navigation.scss
+++ b/src/sass/partials/_navigation.scss
@@ -81,7 +81,7 @@ a {
 // ------------ Nav search bar ------------
 .search-bar {
   position: relative;
-  /* margin: 20px auto 0px auto; */
+  margin: 20px auto 0px auto;
 
   &-input {
     padding: 10px 20px;
