Can now create posts in admin page

--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -175,8 +175,11 @@ table {
 }
 
 // Alerts
-.alert-danger {
-  margin: 20px auto;
+.alert-danger,
+.alert-success {
+  margin: 20px auto !important;
+  text-align: center;
+  flex-basis: 100%;
 }
 
 // ------------ Breadcrumbs ------------
