--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -26,6 +26,7 @@ textarea {
 
 label {
   color: $text-color;
+  font-size: 1.2rem;
 }
 
 textarea {
@@ -104,4 +105,10 @@ form {
     display: flex;
     flex-direction: column;
   }
+}
+
+.rating-slider {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
