--- a/src/sass/partials/_details.scss
+++ b/src/sass/partials/_details.scss
@@ -53,6 +53,7 @@
     object-fit: contain;
     background-color: $secondary-background;
     padding: 10px;
+    height: 100%;
 
     @media (min-width: 768px) {
       width: 500px;
