Search input in nav now has typeahead

--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -185,7 +185,13 @@ table {
 // ------------ Breadcrumbs ------------
 .breadcrumb {
   align-items: center;
-  margin-left: 100px;
+  justify-content: center;
+
+  @media (min-width: 1044px) {
+    justify-content: flex-start;
+    margin-left: 100px;
+  }
+
   & a {
     color: $text-color;
   }
