--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -112,3 +112,78 @@ form {
   flex-direction: column;
   align-items: center;
 }
+
+// ------------ Range slider styles ------------
+
+input[type="range"] {
+  height: 32px;
+  -webkit-appearance: none;
+  margin: 10px 0;
+  width: 100%;
+}
+input[type="range"]:focus {
+  outline: none;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 11px;
+  cursor: pointer;
+  background: #ff385c;
+  border-radius: 5px;
+}
+input[type="range"]::-webkit-slider-thumb {
+  height: 25px;
+  width: 23px;
+  border-radius: 11px;
+  background: #ff385c;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -7.5px;
+}
+input[type="range"]:focus::-webkit-slider-runnable-track {
+  background: #ff385c;
+}
+input[type="range"]::-moz-range-track {
+  width: 100%;
+  height: 11px;
+  cursor: pointer;
+  background: #ff385c;
+  border-radius: 5px;
+}
+input[type="range"]::-moz-range-thumb {
+  height: 25px;
+  width: 23px;
+  border-radius: 11px;
+  background: #ff385c;
+  cursor: pointer;
+}
+input[type="range"]::-ms-track {
+  width: 100%;
+  height: 11px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type="range"]::-ms-fill-lower {
+  background: #ff385c;
+  border-radius: 10px;
+}
+input[type="range"]::-ms-fill-upper {
+  background: #ff385c;
+  border-radius: 10px;
+}
+input[type="range"]::-ms-thumb {
+  margin-top: 1px;
+  height: 25px;
+  width: 23px;
+  border-radius: 11px;
+  background: #ff385c;
+  cursor: pointer;
+}
+input[type="range"]:focus::-ms-fill-lower {
+  background: #ff385c;
+}
+input[type="range"]:focus::-ms-fill-upper {
+  background: #ff385c;
+}
