--- a/src/sass/partials/_navigation.scss
+++ b/src/sass/partials/_navigation.scss
@@ -57,7 +57,7 @@ a {
 }
 
 .nav-link {
-  color: #484848 !important;
+  color: #484848;
   font-size: 1rem;
   display: flex;
   flex-direction: column;
