Added more margin to h4 in specific page

--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -47,6 +47,10 @@ h5 {
   color: $text-color;
 }
 
+.heading-margin > h4 {
+  margin-top: 20px;
+}
+
 // ------------ Paragraphs ------------
 p {
   color: $text-color;
